--- a/apiblog/Web.config
+++ b/apiblog/Web.config
@@ -105,7 +105,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-      <add name="Connection" connectionString="Host=localhost; user id=postgres; password=teste; database=hotspot" providerName="Npgsql" />        
+   <!--   <add name="Connection" connectionString="Host=localhost; user id=postgres; password=teste; database=hotspot" providerName="Npgsql" /> -->
+      <add name="Connection" connectionString="Host=10.0.100.48; user id=postgres; password=; database=hotspot" providerName="Npgsql" />
   </connectionStrings>
   <system.codedom>
     <compilers>
