--- a/apiblog/apiblog.csproj
+++ b/apiblog/apiblog.csproj
@@ -228,6 +228,7 @@
     <Compile Include="Controllers\AuthenticationController.cs" />
     <Compile Include="Controllers\CategoriaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\LembreteController.cs" />
     <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Controllers\PessoaController.cs" />
     <Compile Include="Entities\Categoria.cs" />
@@ -242,11 +243,15 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AuthenticateModel.cs" />
+    <Compile Include="Models\LembreteModel.cs" />
     <Compile Include="Models\RootPessoaObject.cs" />
     <Compile Include="NinjectDependencies\ContextEntityFactory.cs" />
     <Compile Include="NinjectDependencies\IContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Aniversariante.cs" />
     <Compile Include="Services\CategoriaServices.cs" />
+    <Compile Include="Services\ILembrete.cs" />
+    <Compile Include="Services\LembreteService.cs" />
     <Compile Include="Services\PostServices.cs" />
     <Compile Include="Services\PessoaServices.cs" />
   </ItemGroup>
@@ -321,6 +326,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Lembrete\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config">
