--- a/apiblog/apiblog.csproj
+++ b/apiblog/apiblog.csproj
@@ -248,6 +248,7 @@
     <Compile Include="NinjectDependencies\ContextEntityFactory.cs" />
     <Compile Include="NinjectDependencies\IContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\PostingInDraft.cs" />
     <Compile Include="Services\Aniversariante.cs" />
     <Compile Include="Services\CategoriaServices.cs" />
     <Compile Include="Services\ILembrete.cs" />
