fazendo algumas modificacoes e criando mais uma entidade PostStatus

--- a/apiblog/Web.config
+++ b/apiblog/Web.config
@@ -106,7 +106,9 @@
   </entityFramework>
   <connectionStrings>
    <!--   <add name="Connection" connectionString="Host=localhost; user id=postgres; password=teste; database=hotspot" providerName="Npgsql" /> -->
-   aaaa
+    <add name="Connection" connectionString="Host=10.0.100.48; user id=postgres; password=; database=hotspot" providerName="Npgsql" />
+    
+    
   </connectionStrings>
   <system.codedom>
     <compilers>
