--- a/apiblog/apiblog.csproj
+++ b/apiblog/apiblog.csproj
@@ -222,6 +222,7 @@
     <Compile Include="Config\ComentarioMapping.cs" />
     <Compile Include="Config\EmailMapping.cs" />
     <Compile Include="Config\EnderecoMapping.cs" />
+    <Compile Include="Config\PostStatusMapping.cs" />
     <Compile Include="Config\PostMapping.cs" />
     <Compile Include="Config\PessoaMapping.cs" />
     <Compile Include="Context\ContextData.cs" />
@@ -233,6 +234,7 @@
     <Compile Include="Controllers\PessoaController.cs" />
     <Compile Include="Entities\Categoria.cs" />
     <Compile Include="Entities\Comentario.cs" />
+    <Compile Include="Entities\PostStatus.cs" />
     <Compile Include="Entities\Email.cs" />
     <Compile Include="Entities\Endereco.cs" />
     <Compile Include="Entities\Post.cs" />
@@ -248,10 +250,10 @@
     <Compile Include="NinjectDependencies\ContextEntityFactory.cs" />
     <Compile Include="NinjectDependencies\IContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\PostingInDraft.cs" />
-    <Compile Include="Services\Aniversariante.cs" />
+    <Compile Include="Services\Lembretes\PostingInDraft.cs" />
+    <Compile Include="Services\Lembretes\Aniversariante.cs" />
     <Compile Include="Services\CategoriaServices.cs" />
-    <Compile Include="Services\ILembrete.cs" />
+    <Compile Include="Services\Lembretes\ILembrete.cs" />
     <Compile Include="Services\LembreteService.cs" />
     <Compile Include="Services\PostServices.cs" />
     <Compile Include="Services\PessoaServices.cs" />
