--- a/apiblog/apiblog.csproj
+++ b/apiblog/apiblog.csproj
@@ -25,6 +25,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -241,6 +242,7 @@
     <Compile Include="Entities\Endereco.cs" />
     <Compile Include="Entities\Post.cs" />
     <Compile Include="Entities\Pessoa.cs" />
+    <Compile Include="Filters\TrateException.cs" />
     <Compile Include="Filters\CustomAuthorizeAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -249,8 +251,10 @@
     <Compile Include="Models\Authenticate.cs" />
     <Compile Include="Models\LembreteModel.cs" />
     <Compile Include="Models\RootPessoaObject.cs" />
-    <Compile Include="NinjectDependencies\ContextEntityFactory.cs" />
-    <Compile Include="NinjectDependencies\IContext.cs" />
+    <Compile Include="Factories\GenericServiceFactory.cs" />
+    <Compile Include="Factories\ContextEntityFactory.cs" />
+    <Compile Include="Interfaces\IGenericService.cs" />
+    <Compile Include="Interfaces\IContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AuthenticationService.cs" />
     <Compile Include="Services\JWTServices.cs" />
@@ -259,6 +263,7 @@
     <Compile Include="Services\CategoriaServices.cs" />
     <Compile Include="Services\Lembretes\ILembrete.cs" />
     <Compile Include="Services\LembreteService.cs" />
+    <Compile Include="Services\Teste.cs" />
     <Compile Include="Services\UsuarioServices.cs" />
     <Compile Include="Services\PostServices.cs" />
     <Compile Include="Services\PessoaServices.cs" />
