--- a/apiblog/packages.config
+++ b/apiblog/packages.config
@@ -33,6 +33,8 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages.pt-br" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Logging" version="1.1.5" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Tokens" version="5.1.5" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="2.3.1" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
@@ -45,6 +47,7 @@
   <package id="Npgsql" version="3.2.5" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net452" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="5.1.5" targetFramework="net452" />
   <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
