--- a/apiblog/packages.config
+++ b/apiblog/packages.config
@@ -4,6 +4,8 @@
   <package id="bootstrap" version="3.3.7" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="EntityFramework6.Npgsql" version="3.1.1" targetFramework="net452" />
+  <package id="FluentValidation" version="7.5.0" targetFramework="net452" />
+  <package id="FluentValidation.WebApi" version="7.5.0" targetFramework="net452" />
   <package id="jQuery" version="3.1.1" targetFramework="net452" />
   <package id="JWT" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.4.0" targetFramework="net452" />
@@ -22,10 +24,10 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization.pt-br" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Client.pt-br" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
-  <package id="Microsoft.AspNet.WebApi.Core.pt-br" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.4" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Client.pt-br" version="5.2.4" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.4" targetFramework="net452" />
+  <package id="Microsoft.AspNet.WebApi.Core.pt-br" version="5.2.4" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
@@ -46,6 +48,9 @@
   <package id="Ninject.Web.WebApi.WebHost" version="3.2.4.0" targetFramework="net452" />
   <package id="Npgsql" version="3.2.5" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net452" />
+  <package id="System.ComponentModel.Annotations" version="4.4.1" targetFramework="net452" />
+  <package id="System.ComponentModel.Primitives" version="4.3.0" targetFramework="net452" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net452" />
   <package id="System.IdentityModel.Tokens.Jwt" version="5.1.5" targetFramework="net452" />
   <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net452" />
