fazendo modificacoes para adicionar annotation checkRole

--- a/apiblog/Web.config
+++ b/apiblog/Web.config
@@ -108,8 +108,8 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <!--<add name="Connection" connectionString="Host=localhost; user id=postgres; password=20en33; database=hotspot" providerName="Npgsql"/> -->
-     <add name="Connection" connectionString="Host=10.0.100.48; user id=postgres; password=; database=hotspot" providerName="Npgsql" /> 
+    <add name="Connection" connectionString="Host=localhost; user id=postgres; password=20en33; database=hotspot" providerName="Npgsql"/>
+    <!-- <add name="Connection" connectionString="Host=10.0.100.48; user id=postgres; password=; database=hotspot" providerName="Npgsql" /> -->
   </connectionStrings>
   <system.data>
     <DbProviderFactories>
